WebCore:

2009-02-16  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Mark Rowe.

        https://bugs.webkit.org/show_bug.cgi?id=16309
        HTML5: The third execCommand argument for insert{un}orderedlist should be ignored

        When we originally implemented this command, MSDN documentation said that IE set the
        id attribute of inserted lists to the third argument to execCommand, but IE doesn't
        do this nor do any other browsers.

        * editing/EditorCommand.cpp:
        (WebCore::executeInsertOrderedList):
        (WebCore::executeInsertUnorderedList):
        * editing/IndentOutdentCommand.cpp:
        (WebCore::IndentOutdentCommand::outdentParagraph):
        * editing/InsertListCommand.cpp:
        (WebCore::InsertListCommand::insertList):
        (WebCore::InsertListCommand::InsertListCommand):
        (WebCore::InsertListCommand::doApply):
        * editing/InsertListCommand.h:
        (WebCore::InsertListCommand::create):

LayoutTests:

2009-02-16  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Mark Rowe.

        https://bugs.webkit.org/show_bug.cgi?id=16309
        HTML5: The third execCommand argument for insert{un}orderedlist should be ignored

        * editing/execCommand/insert-list-with-id-expected.txt: Added.
        * editing/execCommand/insert-list-with-id.html:
        * platform/mac/editing/execCommand/insert-list-with-id-expected.checksum: Removed.
        * platform/mac/editing/execCommand/insert-list-with-id-expected.png: Removed.
        * platform/mac/editing/execCommand/insert-list-with-id-expected.txt: Removed.



Canonical link: https://commits.webkit.org/33126@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41034 268f45cc-cd09-0410-ab3c-d52691b4dbfc